tools/power turbostat: version 2025.09.09 (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -12090,6 +12090,7 @@
 	patches.suse/tools-power-turbostat-Fix-DMR-support.patch
 	patches.suse/tools-power-turbostat-standardize-PER_THREAD_PARAMS.patch
 	patches.suse/tools-power-turbostat-Handle-non-root-legacy-uncore-.patch
+	patches.suse/tools-power-turbostat-version-2025.09.09.patch
 	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
 	patches.suse/x86-sev-Evict-cache-lines-during-SNP-memory-validatio.patch
 	patches.suse/btrfs-fix-wrong-length-parameter-for-btrfs_cleanup_o.patch
