selftests/run_kselftest.sh: Add `--skip` argument option (bsc#1254221).

--- a/series.conf
+++ b/series.conf
@@ -13427,6 +13427,9 @@
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
 
+	# out-of-tree patches
+	patches.suse/selftests-run_kselftest.sh-Add-skip-argument-option.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
