--- a/series.conf
+++ b/series.conf
@@ -13398,6 +13398,7 @@
 	patches.suse/PM-hibernate-Emit-an-error-when-image-writing-fails.patch
 	patches.suse/PM-hibernate-Use-atomic64_t-for-compressed_size-vari.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
+	patches.suse/ALSA-usb-audio-Fix-potential-overflow-of-PCM-transfe.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
