--- a/series.conf
+++ b/series.conf
@@ -55922,6 +55922,7 @@
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
+	patches.suse/nvme-auth-add-hkdf_expand_label.patch
 	patches.suse/nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep-quirk.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
