nvme-auth: use hkdf_expand_label() (bsc#1247683).

--- a/series.conf
+++ b/series.conf
@@ -55923,6 +55923,7 @@
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 	patches.suse/nvme-auth-add-hkdf_expand_label.patch
+	patches.suse/nvme-auth-use-hkdf_expand_label.patch
 	patches.suse/nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep-quirk.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
