cifs: Fix uncached read into ITER_KVEC iterator (bsc#1245449).

--- a/series.conf
+++ b/series.conf
@@ -35166,6 +35166,9 @@
 	# bnc#1193353
 +mgorman	patches.suse/cpuidle-menu-Bias-selection-of-a-shallower-c-state-when-CPU-idles-for-IO.patch
 
+	# stable/linux linux-6.6.y
+	patches.suse/cifs-Fix-uncached-read-into-ITER_KVEC-iterator.patch
+
 	########################################################
 	# Architecture specific patches
 	########################################################
