selftests: net: lib: remove ns from list after clean-up (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -39801,6 +39801,7 @@
 	patches.suse/ice-add-and-use-roundup_u64-instead-of-open-coding-e.patch
 	patches.suse/ice-use-irq_update_affinity_hint.patch
 	patches.suse/selftests-net-lib-ignore-possible-errors.patch
+	patches.suse/selftests-net-lib-remove-ns-from-list-after-clean-up.patch
 	patches.suse/flow_offload-add-encapsulation-control-flag-helpers.patch
 	patches.suse/sfc-use-flow_rule_is_supp_enc_control_flags.patch
 	patches.suse/net-mlx5e-flower-validate-encapsulation-control-flag.patch
