selftests: forwarding: Remove duplicated lib.sh content (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29078,6 +29078,7 @@
 	patches.suse/mlxsw-Use-refcount_t-for-reference-counting.patch
 	patches.suse/net-stmmac-dwmac-starfive-Add-support-for-JH7100-SoC.patch
 	patches.suse/selftests-forwarding-Redefine-relative_path-variable.patch
+	patches.suse/selftests-forwarding-Remove-duplicated-lib.sh-content.patch
 	patches.suse/ethtool-replace-struct-ethtool_eee-with-a-new-struct.patch
 	patches.suse/ethtool-switch-back-from-ethtool_keee-to-ethtool_eee.patch
 	patches.suse/ethtool-adjust-struct-ethtool_keee-to-kernel-needs.patch
