selftests/net: add lib.sh (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -22643,6 +22643,7 @@
 	patches.suse/ice-Re-enable-timestamping-correctly-after-reset.patch
 	patches.suse/ice-periodically-kick-Tx-timestamp-interrupt.patch
 	patches.suse/ice-Rename-E822-to-E82X.patch
+	patches.suse/selftests-net-add-lib.sh.patch
 	patches.suse/selftests-net-specify-the-interface-when-do-arping.patch
 	patches.suse/selftests-net-convert-unicast_extensions.sh-to-run-i.patch
 	patches.suse/sfc-Implement-ndo_hwtstamp_-get-set.patch
