selftests: forwarding: Parametrize mausezahn delay (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29810,6 +29810,7 @@
 	patches.suse/net-dsa-mt7530-sort-link-settings-ops-and-force-link.patch
 	patches.suse/net-dsa-mt7530-simplify-link-operations.patch
 	patches.suse/net-smc-reduce-rtnl-pressure-in-smc_pnet_create_pnet.patch
+	patches.suse/selftests-forwarding-Parametrize-mausezahn-delay.patch
 	patches.suse/ethtool-ignore-unused-unreliable-fields-in-set_eee-o.patch
 	patches.suse/idpf-add-idpf_virtchnl.h.patch
 	patches.suse/idpf-implement-virtchnl-transaction-manager.patch
