--- a/series.conf
+++ b/series.conf
@@ -22730,6 +22730,7 @@
 	patches.suse/tools-ynl-gen-store-recursive-nests-by-a-pointer.patch
 	patches.suse/tools-ynl-gen-print-prototypes-for-recursive-stuff.patch
 	patches.suse/page_pool-fix-typos-and-punctuation.patch
+	patches.suse/selftests-net-add-variable-NS_LIST-for-lib.sh.patch
 	patches.suse/selftests-net-fix-grep-checking-for-fib_nexthop_mult.patch
 	patches.suse/net-atlantic-eliminate-double-free-in-error-handling.patch
 	patches.suse/i40e-remove-fake-support-of-rx-frames-irq.patch
