selftests: lib: tc_rule_stats_get(): Move default to argument definition (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -39938,6 +39938,7 @@
 	patches.suse/ethtool-cmis_cdb-Add-a-layer-for-supporting-CDB-comm.patch
 	patches.suse/ethtool-cmis_fw_update-add-a-layer-for-supporting-fi.patch
 	patches.suse/ethtool-Add-ability-to-flash-transceiver-modules-fir.patch
+	patches.suse/selftests-lib-tc_rule_stats_get-Move-default-to-argument-d.patch
 	patches.suse/net-move-ethtool-related-netdev-state-into-its-own-s.patch
 	patches.suse/net-ethtool-attach-an-XArray-of-custom-RSS-contexts-.patch
 	patches.suse/net-ethtool-record-custom-RSS-contexts-in-the-XArray.patch
