--- a/series.conf
+++ b/series.conf
@@ -38550,6 +38550,7 @@
 	patches.suse/ipv6-fix-possible-race-in-__fib6_drop_pcpu_from.patch
 	patches.suse/net-ethtool-fix-the-error-condition-in-ethtool_get_p.patch
 	patches.suse/selftests-net-lib-support-errexit-with-busywait.patch
+	patches.suse/selftests-net-lib-avoid-error-removing-empty-netns-name.patch
 	patches.suse/scsi-mpi3mr-Use-proper-format-specifier-in-mpi3mr_sas_port_add.patch
 	patches.suse/scsi-core-alua-I-O-errors-for-ALUA-state-transitions.patch
 	patches.suse/scsi-sr-Fix-unintentional-arithmetic-wraparound.patch
