selftests: net: Unify code of busywait() and slowwait() (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -34874,6 +34874,7 @@
 	patches.suse/gve-Correctly-report-software-timestamping-capabilit.patch
 	patches.suse/udp-Avoid-call-to-compute_score-on-multiple-sites.patch
 	patches.suse/tools-ynl-don-t-return-None-for-dumps.patch
+	patches.suse/selftests-net-Unify-code-of-busywait-and-slowwait.patch
 	patches.suse/ice-Remove-unnecessary-argument-from-ice_fdir_comp_r.patch
 	patches.suse/ice-Implement-flow-type-ether-rules.patch
 	patches.suse/ice-set-vf-num_msix-in-ice_initialize_vf_entry.patch
