--- a/series.conf
+++ b/series.conf
@@ -34634,6 +34634,7 @@
 	patches.suse/bpftool-Remove-unnecessary-source-files-from-bootstr.patch
 	patches.suse/selftests-bpf-Fix-flaky-test-btf_map_in_map-lookup_u.patch
 	patches.suse/selftests-net-libs-Change-variable-fallback-syntax.patch
+	patches.suse/selftests-forwarding.config.sample-Move-overrides-to-lib.s.patch
 	patches.suse/ynl-support-hex-display_hint-for-integer.patch
 	patches.suse/doc-netlink-specs-Add-vlan-attr-in-rt_link-spec.patch
 	patches.suse/gve-Add-counter-adminq_get_ptype_map_cnt-to-stats-re.patch
