selftests: net: lib: Move logging from forwarding/lib.sh here (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -49358,6 +49358,7 @@
 	patches.suse/bnxt_en-optimize-gettimex64.patch
 	patches.suse/octeontx2-pf-Fix-spelling-mistake-reprentator-repres.patch
 	patches.suse/ndo_fdb_add-Add-a-parameter-to-report-whether-notifi.patch
+	patches.suse/selftests-net-lib-Move-logging-from-forwarding-lib.sh-here.patch
 	patches.suse/ice-rework-of-dump-serdes-equalizer-values-feature.patch
 	patches.suse/ice-extend-dump-serdes-equalizer-values-feature.patch
 	patches.suse/ice-refactor-last-segment-of-DDP-pkg.patch
