selftests/net/lib: no need to record ns name if it already exist (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -37367,6 +37367,7 @@
 	patches.suse/net-bridge-xmit-make-sure-we-have-at-least-eth-header-len-bytes.patch
 	patches.suse/selftests-net-bridge-increase-IGMP-MLD-exclude-timeo.patch
 	patches.suse/0001-net-bridge-mst-fix-vlan-use-after-free.patch
+	patches.suse/selftests-net-lib-no-need-to-record-ns-name-if-it-already-.patch
 	patches.suse/net-ipv6-Fix-route-deleting-failure-when-metric-equa.patch
 	patches.suse/bonding-fix-oops-during-rmmod.patch
 	patches.suse/idpf-don-t-skip-over-ethtool-tcp-data-split-setting.patch
