selftests: net: lib: support errexit with busywait (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -38549,6 +38549,7 @@
 	patches.suse/af_unix-Annotate-data-race-of-sk-sk_state-in-unix_st.patch
 	patches.suse/ipv6-fix-possible-race-in-__fib6_drop_pcpu_from.patch
 	patches.suse/net-ethtool-fix-the-error-condition-in-ethtool_get_p.patch
+	patches.suse/selftests-net-lib-support-errexit-with-busywait.patch
 	patches.suse/scsi-mpi3mr-Use-proper-format-specifier-in-mpi3mr_sas_port_add.patch
 	patches.suse/scsi-core-alua-I-O-errors-for-ALUA-state-transitions.patch
 	patches.suse/scsi-sr-Fix-unintentional-arithmetic-wraparound.patch
