--- a/series.conf
+++ b/series.conf
@@ -54684,6 +54684,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-invalid-array-index-in-ssid-ass.patch
 	patches.suse/wifi-mt76-mt7925-Fix-null-ptr-deref-in-mt7925_therma.patch
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
+	patches.suse/selftests-net-lib-fix-shift-count-out-of-range.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/net-mlx5e-Fix-race-between-DIM-disable-and-net_dim.patch
 	patches.suse/bnxt_en-Set-DMA-unmap-len-correctly-for-XDP_REDIRECT.patch
