--- a/series.conf
+++ b/series.conf
@@ -34640,6 +34640,7 @@
 	patches.suse/selftests-forwarding-Have-RET-track-kselftest-framework-co.patch
 	patches.suse/selftests-forwarding-Convert-log_test-to-recognize-RET-val.patch
 	patches.suse/selftests-forwarding-Support-for-performance-sensitive-tes.patch
+	patches.suse/selftests-forwarding-Add-a-test-for-testing-lib.sh-functio.patch
 	patches.suse/ynl-support-hex-display_hint-for-integer.patch
 	patches.suse/doc-netlink-specs-Add-vlan-attr-in-rt_link-spec.patch
 	patches.suse/gve-Add-counter-adminq_get_ptype_map_cnt-to-stats-re.patch
