selftests: net: libs: Change variable fallback syntax (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -34633,6 +34633,7 @@
 	patches.suse/selftests-bpf-Prevent-client-connect-before-server-b.patch
 	patches.suse/bpftool-Remove-unnecessary-source-files-from-bootstr.patch
 	patches.suse/selftests-bpf-Fix-flaky-test-btf_map_in_map-lookup_u.patch
+	patches.suse/selftests-net-libs-Change-variable-fallback-syntax.patch
 	patches.suse/ynl-support-hex-display_hint-for-integer.patch
 	patches.suse/doc-netlink-specs-Add-vlan-attr-in-rt_link-spec.patch
 	patches.suse/gve-Add-counter-adminq_get_ptype_map_cnt-to-stats-re.patch
