--- a/series.conf
+++ b/series.conf
@@ -34636,6 +34636,7 @@
 	patches.suse/selftests-net-libs-Change-variable-fallback-syntax.patch
 	patches.suse/selftests-forwarding.config.sample-Move-overrides-to-lib.s.patch
 	patches.suse/selftests-forwarding-Change-inappropriate-log_test_skip-ca.patch
+	patches.suse/selftests-lib-Define-more-kselftest-exit-codes.patch
 	patches.suse/ynl-support-hex-display_hint-for-integer.patch
 	patches.suse/doc-netlink-specs-Add-vlan-attr-in-rt_link-spec.patch
 	patches.suse/gve-Add-counter-adminq_get_ptype_map_cnt-to-stats-re.patch
