selftests: net: add helper for checking if nettest is available (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -44867,6 +44867,7 @@
 	patches.suse/ice-Fix-a-32bit-bug.patch
 	patches.suse/net-ipv6-ioam6-code-alignment.patch
 	patches.suse/net-ipv6-ioam6-new-feature-tunsrc.patch
+	patches.suse/selftests-net-add-helper-for-checking-if-nettest-is-availa.patch
 	patches.suse/net-atlantic-Avoid-warning-about-potential-string-tr.patch
 	patches.suse/ipv4-icmp-Pass-full-DS-field-to-ip_route_input.patch
 	patches.suse/neighbour-delete-redundant-judgment-statements.patch
