selftests: net: lib: set 'i' as local (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -38551,6 +38551,7 @@
 	patches.suse/net-ethtool-fix-the-error-condition-in-ethtool_get_p.patch
 	patches.suse/selftests-net-lib-support-errexit-with-busywait.patch
 	patches.suse/selftests-net-lib-avoid-error-removing-empty-netns-name.patch
+	patches.suse/selftests-net-lib-set-i-as-local.patch
 	patches.suse/scsi-mpi3mr-Use-proper-format-specifier-in-mpi3mr_sas_port_add.patch
 	patches.suse/scsi-core-alua-I-O-errors-for-ALUA-state-transitions.patch
 	patches.suse/scsi-sr-Fix-unintentional-arithmetic-wraparound.patch
