selftests/net/forwarding: add slowwait functions (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29152,6 +29152,7 @@
 	patches.suse/net-phy-realtek-use-generic-MDIO-constants.patch
 	patches.suse/net-phy-realtek-add-5Gbps-support-to-rtl822x_config_.patch
 	patches.suse/net-smc-change-the-term-virtual-ISM-to-Emulated-ISM.patch
+	patches.suse/selftests-net-forwarding-add-slowwait-functions.patch
 	patches.suse/xfrm-generalize-xdo_dev_state_update_curlft-to-allow.patch
 	patches.suse/xfrm-get-global-statistics-from-the-offloaded-device.patch
 	patches.suse/net-mlx5e-Connect-mlx5-IPsec-statistics-with-XFRM-co.patch
