selftests: net: lib: remove 'ns' var in setup_ns (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -39803,6 +39803,7 @@
 	patches.suse/selftests-net-lib-ignore-possible-errors.patch
 	patches.suse/selftests-net-lib-remove-ns-from-list-after-clean-up.patch
 	patches.suse/selftests-net-lib-do-not-set-ns-var-as-readonly.patch
+	patches.suse/selftests-net-lib-remove-ns-var-in-setup_ns.patch
 	patches.suse/flow_offload-add-encapsulation-control-flag-helpers.patch
 	patches.suse/sfc-use-flow_rule_is_supp_enc_control_flags.patch
 	patches.suse/net-mlx5e-flower-validate-encapsulation-control-flag.patch
