--- a/series.conf
+++ b/series.conf
@@ -11288,6 +11288,7 @@
 	patches.suse/sched-fair-Fix-entity-s-lag-with-run-to-parity.patch
 	patches.suse/sched-fair-Always-trigger-resched-at-the-end-of-a-protected-period.patch
 	patches.suse/sched-deadline-Initialize-dl_servers-after-SMP.patch
+	patches.suse/smpboot-introduce-SDTL_INIT-helper-to-tidy-sched-topology-setup.patch
 	patches.suse/x86-CPU-AMD-Add-CPUID-faulting-support.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-boot-Use-D__DISABLE_EXPORTS.patch
