x86/smpboot: avoid SMT domain attach/destroy if SMT is not enabled (bsc#1246843).

--- a/series.conf
+++ b/series.conf
@@ -11291,6 +11291,7 @@
 	patches.suse/smpboot-introduce-SDTL_INIT-helper-to-tidy-sched-topology-setup.patch
 	patches.suse/x86-smpboot-remove-redundant-CONFIG_SCHED_SMT.patch
 	patches.suse/x86-smpboot-moves-x86_topology-to-static-initialize-and-truncate.patch
+	patches.suse/x86-smpboot-avoid-SMT-domain-attach-destroy-if-SMT-is-not-enabled.patch
 	patches.suse/x86-CPU-AMD-Add-CPUID-faulting-support.patch
 	patches.suse/x86-fpu-Delay-instruction-pointer-fixup-until-after-warnin.patch
 	patches.suse/s390-boot-Use-D__DISABLE_EXPORTS.patch
