nfsd: do not defer requests during idmap lookup in v4 compound decode (bsc#1232223).

--- a/series.conf
+++ b/series.conf
@@ -35419,6 +35419,7 @@
 	patches.suse/nfs-Bump-default-write-congestion-size.patch
 	patches.suse/nfs-serialize-opens.patch
 	patches.suse/NFS-never-reuse-a-NFSv4-0-lock-owner.patch
+	patches.suse/nfsd-do-not-defer-requests-during-idmap-lookup-in-v4-compo.patch
 
 	# cifs
 	patches.suse/smb-client-fix-corruption-in-cifs_extend_writeback.patch
