--- a/series.conf
+++ b/series.conf
@@ -35420,6 +35420,7 @@
 	patches.suse/nfs-serialize-opens.patch
 	patches.suse/NFS-never-reuse-a-NFSv4-0-lock-owner.patch
 	patches.suse/nfsd-do-not-defer-requests-during-idmap-lookup-in-v4-compo.patch
+	patches.suse/nfsd-fix-return-error-codes-for-nfsd_map_name_to_-ug-id.patch
 
 	# cifs
 	patches.suse/smb-client-fix-corruption-in-cifs_extend_writeback.patch
