--- a/series.conf
+++ b/series.conf
@@ -13469,6 +13469,7 @@
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 
 	# tip/tip
+	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
 	patches.suse/sched-fair-Enable-scheduler-feature-NEXT_BUDDY.patch
 	patches.suse/sched-fair-Reimplement-NEXT_BUDDY-to-align-with-EEVDF-goals.patch
 	patches.suse/sched-fair-Revert-max_newidle_lb_cost-bump.patch
