sched/fair: Have SD_SERIALIZE affect newidle balancing (bsc#1248792).

--- a/series.conf
+++ b/series.conf
@@ -13476,6 +13476,7 @@
 	patches.suse/sched-fair-Small-cleanup-to-sched_balance_newidle.patch
 	patches.suse/sched-fair-Small-cleanup-to-update_newidle_cost.patch
 	patches.suse/sched-fair-Proportional-newidle-balance.patch
+	patches.suse/sched-fair-Have-SD_SERIALIZE-affect-newidle-balancing.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
