--- a/series.conf
+++ b/series.conf
@@ -35263,6 +35263,7 @@
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
+	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 
 	########################################################
 	# end of sorted patches
