smb: client: fix incomplete backport in cfids_invalidation_worker() (bsc#1254096).

--- a/series.conf
+++ b/series.conf
@@ -2539,6 +2539,7 @@
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
+	patches.suse/smb-client-fix-incomplete-backport-in-cfids_invalida.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
