KVM: s390: improve interrupt cpu for wakeup (bsc#1235463).

--- a/series.conf
+++ b/series.conf
@@ -56273,6 +56273,7 @@
 	patches.suse/bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.suse/vhost-vringh-Modify-the-return-value-check.patch
 	patches.suse/KVM-x86-Have-all-vendor-neutral-sub-configs-depend-o.patch
+	patches.suse/KVM-s390-improve-interrupt-cpu-for-wakeup.patch
 	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
