KVM: s390: kABI backport for 'last_sleep_cpu' (bsc#1252352).

--- a/series.conf
+++ b/series.conf
@@ -57229,6 +57229,7 @@
 	patches.kabi/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.kabi/kabi-fix-sch_qfq-Fix-null-deref-in-agg_dequeue.patch
 	patches.kabi/kabi-hide-dst_entry-dev_rcu.patch
+	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
