KVM: s390: kABI backport for 'last_sleep_cpu' (bsc#1252352).

--- a/series.conf
+++ b/series.conf
@@ -13950,6 +13950,7 @@
 	patches.kabi/PCI-qcom-Add-equalization-settings-for-8.0-GT-s-and-3.patch
 	patches.kabi/PATCH-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
 	patches.kabi/usb-acpi-fix-device-link-removal.patch
+	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
 
 	########################################################
 	# preempt-rt backport converged
