--- a/series.conf
+++ b/series.conf
@@ -12917,6 +12917,7 @@
 	patches.suse/bpf-Reject-negative-offsets-for-ALU-ops.patch
 	patches.suse/vhost-vringh-Modify-the-return-value-check.patch
 	patches.suse/KVM-x86-Have-all-vendor-neutral-sub-configs-depend-o.patch
+	patches.suse/KVM-s390-improve-interrupt-cpu-for-wakeup.patch
 	patches.suse/kdb-Replace-deprecated-strcpy-with-memmove-in-vkdb_printf.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
 	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
