--- a/series.conf
+++ b/series.conf
@@ -13444,6 +13444,7 @@
 	patches.suse/NFS-Fix-LTP-test-failures-when-timestamps-are-delegated.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-revision.patch
 	patches.suse/x86-microcode-AMD-Add-Zen5-model-0x44-stepping-0x1-minrev.patch
+	patches.suse/s390-sles16-s390-mm-Fix-__ptep_rdp-inline-assembly.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
