--- a/series.conf
+++ b/series.conf
@@ -34764,6 +34764,7 @@
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep-quirk.patch
+	patches.suse/nvme-Use-non-zero-KATO-for-persistent-discovery-conn.patch
 	patches.suse/ALSA-usb-audio-Add-validation-of-UAC2-UAC3-effect-un.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
