--- a/series.conf
+++ b/series.conf
@@ -12352,6 +12352,7 @@
 	patches.suse/power-supply-bq27xxx-restrict-no-battery-detection-t.patch
 	patches.suse/btrfs-fix-invalid-extref-key-setup-when-replaying-de.patch
 	patches.suse/btrfs-initialize-inode-file_extent_tree-after-i_mode.patch
+	patches.suse/dm-integrity-limit-MAX_TAG_SIZE-to-255.patch
 	patches.suse/platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro-to-spu.patch
 	patches.suse/platform-x86-amd-pmf-Support-new-ACPI-ID-AMDI0108.patch
 	patches.suse/platform-x86-asus-wmi-Re-add-extra-keys-to-ignore_ke.patch
