--- a/series.conf
+++ b/series.conf
@@ -12353,6 +12353,7 @@
 	patches.suse/btrfs-fix-invalid-extref-key-setup-when-replaying-de.patch
 	patches.suse/btrfs-initialize-inode-file_extent_tree-after-i_mode.patch
 	patches.suse/dm-integrity-limit-MAX_TAG_SIZE-to-255.patch
+	patches.suse/dm-raid-don-t-set-io_min-and-io_opt-for-raid1.patch
 	patches.suse/platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro-to-spu.patch
 	patches.suse/platform-x86-amd-pmf-Support-new-ACPI-ID-AMDI0108.patch
 	patches.suse/platform-x86-asus-wmi-Re-add-extra-keys-to-ignore_ke.patch
