--- a/series.conf
+++ b/series.conf
@@ -13467,6 +13467,7 @@
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
+	patches.suse/nvmet-auth-update-sc_c-in-target-host-hash-calculati.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 
