scsi: lpfc: Modify kref handling for Fabric Controller ndlps (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35273,6 +35273,7 @@
 	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
 	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
 	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
+	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
 
 	########################################################
 	# end of sorted patches
