scsi: lpfc: Fix reusing an ndlp that is marked NLP_DROPPED during FLOGI (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35274,6 +35274,7 @@
 	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
 	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
+	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
 
 	########################################################
 	# end of sorted patches
