--- a/series.conf
+++ b/series.conf
@@ -35276,6 +35276,7 @@
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
 	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
 	patches.suse/scsi-lpfc-Allow-support-for-BB-credit-recovery-in-po.patch
+	patches.suse/scsi-lpfc-Add-capability-to-register-Platform-Name-I.patch
 
 	########################################################
 	# end of sorted patches
