scsi: lpfc: Fix leaked ndlp krefs when in point-to-point topology (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35272,6 +35272,7 @@
 	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
 	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
 	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
+	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 
 	########################################################
 	# end of sorted patches
