scsi: lpfc: Allow support for BB credit recovery in point-to-point topology (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35275,6 +35275,7 @@
 	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
 	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
+	patches.suse/scsi-lpfc-Allow-support-for-BB-credit-recovery-in-po.patch
 
 	########################################################
 	# end of sorted patches
