scsi: lpfc: Revise discovery related function headers and comments (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35269,6 +35269,7 @@
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
+	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
 
 	########################################################
 	# end of sorted patches
