scsi: lpfc: Remove redundant NULL ptr assignment in lpfc_els_free_iocb() (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35270,6 +35270,7 @@
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
 	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
+	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
 
 	########################################################
 	# end of sorted patches
