scsi: lpfc: Update various NPIV diagnostic log messaging (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -35267,6 +35267,9 @@
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
