scsi: lpfc: Update lpfc version to 14.4.0.12 (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -13485,6 +13485,7 @@
 	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
 	patches.suse/scsi-lpfc-Allow-support-for-BB-credit-recovery-in-po.patch
 	patches.suse/scsi-lpfc-Add-capability-to-register-Platform-Name-I.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.12.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
