--- a/series.conf
+++ b/series.conf
@@ -13480,6 +13480,7 @@
 	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
 	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
 	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
+	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
