--- a/series.conf
+++ b/series.conf
@@ -13478,6 +13478,7 @@
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
 	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
+	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
