scsi: lpfc: Add capability to register Platform Name ID to fabric (bsc#1254119).

--- a/series.conf
+++ b/series.conf
@@ -13484,6 +13484,7 @@
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
 	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
 	patches.suse/scsi-lpfc-Allow-support-for-BB-credit-recovery-in-po.patch
+	patches.suse/scsi-lpfc-Add-capability-to-register-Platform-Name-I.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
