--- a/series.conf
+++ b/series.conf
@@ -13482,6 +13482,7 @@
 	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
 	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
+	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
