--- a/series.conf
+++ b/series.conf
@@ -13479,6 +13479,7 @@
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
 	patches.suse/scsi-lpfc-Revise-discovery-related-function-headers-.patch
 	patches.suse/scsi-lpfc-Remove-redundant-NULL-ptr-assignment-in-lp.patch
+	patches.suse/scsi-lpfc-Ensure-unregistration-of-rpis-for-received.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
