--- a/series.conf
+++ b/series.conf
@@ -13483,6 +13483,7 @@
 	patches.suse/scsi-lpfc-Fix-leaked-ndlp-krefs-when-in-point-to-poi.patch
 	patches.suse/scsi-lpfc-Modify-kref-handling-for-Fabric-Controller.patch
 	patches.suse/scsi-lpfc-Fix-reusing-an-ndlp-that-is-marked-NLP_DRO.patch
+	patches.suse/scsi-lpfc-Allow-support-for-BB-credit-recovery-in-po.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
