--- a/series.conf
+++ b/series.conf
@@ -10037,6 +10037,7 @@
 	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/platform-x86-intel-vsec-Change-return-type-of-intel_.patch
 	patches.suse/hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
+	patches.suse/platform-x86-ISST-Support-SST-TF-revision-2.patch
 	patches.suse/platform-x86-amd-hsmp-Use-a-single-DRIVER_VERSION-for-all-.patch
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
