--- a/series.conf
+++ b/series.conf
@@ -10039,6 +10039,7 @@
 	patches.suse/hid-asus-check-ROG-Ally-MCU-version-and-warn.patch
 	patches.suse/platform-x86-ISST-Support-SST-TF-revision-2.patch
 	patches.suse/platform-x86-ISST-Support-SST-PP-revision-2.patch
+	patches.suse/platform-x86-ISST-Update-minor-version.patch
 	patches.suse/platform-x86-amd-hsmp-Use-a-single-DRIVER_VERSION-for-all-.patch
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
