--- a/series.conf
+++ b/series.conf
@@ -4852,6 +4852,7 @@
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-PH14-51.patch
 	patches.suse/platform-x86-intel-pmt-Constify-struct-bin_attribute.patch
 	patches.suse/platform-x86-amd-hsmp-Constify-struct-bin_attribute.patch
+	patches.suse/tools-power-x86-intel-speed-select-Fix-TRL-restore-after-SST-TF-disable.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
 	patches.suse/platform-x86-think-lmi-Directly-use-firmware_attribu.patch
