tools/power/x86/intel-speed-select: Prevent increasing MAX_DIE_PER_PACKAGE (PED-14190).

--- a/series.conf
+++ b/series.conf
@@ -7231,6 +7231,7 @@
 	patches.suse/platform-x86-lenovo-yoga-tab2-pro-1380-fastcharger-M.patch
 	patches.suse/platform-x86-dell-uart-backlight-Make-dell_uart_bl_s.patch
 	patches.suse/platform-x86-dell-ddv-Fix-temperature-calculation.patch
+	patches.suse/tools-power-x86-intel-speed-select-Prevent-increasing-MAX_DIE_PER_PACKAGE.patch
 	patches.suse/platform-x86-x86-android-tablets-Add-select-POWER_SU.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
