tools/power/x86/intel-speed-select: Die ID for IO dies (PED-14190).

--- a/series.conf
+++ b/series.conf
@@ -7233,6 +7233,7 @@
 	patches.suse/platform-x86-dell-ddv-Fix-temperature-calculation.patch
 	patches.suse/tools-power-x86-intel-speed-select-Prevent-increasing-MAX_DIE_PER_PACKAGE.patch
 	patches.suse/tools-power-x86-intel-speed-select-Fix-the-condition-to-check-multi-die-system.patch
+	patches.suse/tools-power-x86-intel-speed-select-Die-ID-for-IO-dies.patch
 	patches.suse/platform-x86-x86-android-tablets-Add-select-POWER_SU.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
