--- a/series.conf
+++ b/series.conf
@@ -7235,6 +7235,7 @@
 	patches.suse/tools-power-x86-intel-speed-select-Fix-the-condition-to-check-multi-die-system.patch
 	patches.suse/tools-power-x86-intel-speed-select-Die-ID-for-IO-dies.patch
 	patches.suse/tools-power-x86-intel-speed-select-Prefix-header-search-path-with-sysroot.patch
+	patches.suse/tools-power-x86-intel-speed-select-v1.22-release.patch
 	patches.suse/platform-x86-x86-android-tablets-Add-select-POWER_SU.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
