tools/power/x86/intel-speed-select: Support SST PP revision 2 fields (PED-14190).

--- a/series.conf
+++ b/series.conf
@@ -10050,6 +10050,7 @@
 	patches.suse/platform-x86-amd-hsmp-Use-a-single-DRIVER_VERSION-for-all-.patch
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
+	patches.suse/tools-power-x86-intel-speed-select-Support-SST-PP-revision-2-fields.patch
 	patches.suse/platform-x86-intel-uncore-freq-Add-attributes-to-sho.patch
 	patches.suse/platform-x86-intel-power-domains-Add-interface-to-ge.patch
 	patches.suse/platform-x86-intel-uncore-freq-Add-attributes-to-sho-247b43f.patch
