--- a/series.conf
+++ b/series.conf
@@ -10051,6 +10051,7 @@
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
 	patches.suse/tools-power-x86-intel-speed-select-Support-SST-PP-revision-2-fields.patch
+	patches.suse/tools-power-x86-intel-speed-select-Skip-uncore-frequency-update.patch
 	patches.suse/platform-x86-intel-uncore-freq-Add-attributes-to-sho.patch
 	patches.suse/platform-x86-intel-power-domains-Add-interface-to-ge.patch
 	patches.suse/platform-x86-intel-uncore-freq-Add-attributes-to-sho-247b43f.patch
