--- a/series.conf
+++ b/series.conf
@@ -34927,6 +34927,7 @@
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
+	patches.suse/dm-fix-queue-start-stop-imbalance-under-suspend-load.patch
 	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
