dm: fix queue start/stop imbalance under suspend/load/resume races (bsc#1253386)

--- a/series.conf
+++ b/series.conf
@@ -12912,6 +12912,7 @@
 	patches.suse/RDMA-irdma-Remove-unused-struct-irdma_cq-fields.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 	patches.suse/dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
+	patches.suse/dm-fix-queue-start-stop-imbalance-under-suspend-load.patch
 	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-libsas-Add-dev_parent_is_expander-helper.patch
 	patches.suse/scsi-pm80xx-Use-dev_parent_is_expander-helper.patch
