--- a/series.conf
+++ b/series.conf
@@ -4667,6 +4667,7 @@
 	patches.suse/cpupower-fix-TSC-MHz-calculation.patch
 	patches.suse/APEI-GHES-Have-GHES-honor-the-panic-setting.patch
 	patches.suse/ACPI-fan-cleanup-resources-in-the-error-path-of-.pro.patch
+	patches.suse/powercap-intel_rapl-Add-support-for-Panther-Lake-platform.patch
 	patches.suse/HID-wacom-Initialize-brightness-of-LED-trigger.patch
 	patches.suse/Revert-HID-multitouch-Add-support-for-lenovo-Y9000P-.patch
 	patches.suse/HID-multitouch-fix-support-for-Goodix-PID-0x01e9.patch
