can: sun4i_can: sun4i_can_interrupt(): fix max irq loop handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35278,6 +35278,7 @@
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
+	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
