platform/x86: intel: punit_ipc: fix memory corruption (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35269,6 +35269,7 @@
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
+	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
