net: phy: mxl-gpy: fix bogus error on USXGMII and integrated PHY (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35270,6 +35270,7 @@
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
+	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
