--- a/series.conf
+++ b/series.conf
@@ -35272,6 +35272,7 @@
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
+	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
