--- a/series.conf
+++ b/series.conf
@@ -35274,6 +35274,7 @@
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
 	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
+	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
