can: kvaser_usb: leaf: Fix potential infinite loop in command parsers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35275,6 +35275,7 @@
 	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
+	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
