--- a/series.conf
+++ b/series.conf
@@ -35276,6 +35276,7 @@
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
+	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
