--- a/series.conf
+++ b/series.conf
@@ -33442,6 +33442,7 @@
 	patches.suse/Bluetooth-hci_core-Fix-use-after-free-in-vhci_flush.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
+	patches.suse/atm-idt77252-Add-missing-dma_map_error.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
 	patches.suse/atm-Release-atm_dev_mutex-after-removing-procfs-in-a.patch
 	patches.suse/HID-wacom-fix-memory-leak-on-kobject-creation-failur.patch
