--- a/series.conf
+++ b/series.conf
@@ -56678,6 +56678,7 @@
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
+	patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch
 
 	# out-of-tree patches
 	patches.suse/selftests-run_kselftest.sh-Add-skip-argument-option.patch
