--- a/series.conf
+++ b/series.conf
@@ -13511,6 +13511,7 @@
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
 	patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch
 	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
+	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
