can: gs_usb: gs_usb_xmit_callback(): fix handling of failed transmitted URBs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13515,6 +13515,7 @@
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
+	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
