--- a/series.conf
+++ b/series.conf
@@ -13508,6 +13508,7 @@
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
 	patches.suse/Bluetooth-hci_core-Fix-triggering-cmd_timer-for-HCI_.patch
+	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
