--- a/series.conf
+++ b/series.conf
@@ -13510,6 +13510,7 @@
 	patches.suse/Bluetooth-hci_core-Fix-triggering-cmd_timer-for-HCI_.patch
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
 	patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch
+	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
