--- a/series.conf
+++ b/series.conf
@@ -13514,6 +13514,7 @@
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
+	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
