--- a/series.conf
+++ b/series.conf
@@ -13509,6 +13509,7 @@
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
 	patches.suse/Bluetooth-hci_core-Fix-triggering-cmd_timer-for-HCI_.patch
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
+	patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
