can: gs_usb: gs_usb_receive_bulk_callback(): check actual_length before accessing header (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13516,6 +13516,7 @@
 	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
+	patches.suse/can-gs_usb-gs_usb_receive_bulk_callback-check-actual.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
