Bluetooth: hci_core: Fix triggering cmd_timer for HCI_OP_NOP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13507,6 +13507,7 @@
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
+	patches.suse/Bluetooth-hci_core-Fix-triggering-cmd_timer-for-HCI_.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
