can: kvaser_usb: leaf: Fix potential infinite loop in command parsers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13513,6 +13513,7 @@
 	patches.suse/Bluetooth-SMP-Fix-not-generating-mackey-and-ltk-when.patch
 	patches.suse/atm-fore200e-Fix-possible-data-race-in-fore200e_open.patch
 	patches.suse/net-phy-mxl-gpy-fix-link-properties-on-USXGMII-and-i.patch
+	patches.suse/can-kvaser_usb-leaf-Fix-potential-infinite-loop-in-c.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
