atm: idt77252: Add missing `dma_map_error()` (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10548,6 +10548,7 @@
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/wifi-mac80211-finish-link-init-before-RCU-publish.patch
+	patches.suse/atm-idt77252-Add-missing-dma_map_error.patch
 	patches.suse/netlink-specs-nfsd-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-dpll-replace-underscores-with-dashes-i.patch
 	patches.suse/netlink-specs-devlink-replace-underscores-with-dashe.patch
