wifi: mt76: do not add wcid entries to sta poll list during MCU reset (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -4543,6 +4543,7 @@
 	patches.suse/wifi-mt76-only-enable-tx-worker-after-setting-the-ch.patch
 	patches.suse/wifi-mt76-mt7915-firmware-restart-on-devices-with-a-.patch
 	patches.suse/wifi-mt76-mt7915-fix-omac-index-assignment-after-har.patch
+	patches.suse/wifi-mt76-do-not-add-wcid-entries-to-sta-poll-list-d.patch
 	patches.suse/wifi-mt76-mt7915-fix-register-mapping.patch
 	patches.suse/wifi-mt76-mt7996-fix-register-mapping.patch
 	patches.suse/wifi-mt76-mt7996-add-max-mpdu-len-capability.patch
