--- a/series.conf
+++ b/series.conf
@@ -4536,6 +4536,7 @@
 	patches.suse/wifi-mt76-mt7925-Update-mt7925_mcu_uni_-tx-rx-_ba-fo.patch
 	patches.suse/wifi-mt76-mt7925-Cleanup-MLO-settings-post-disconnec.patch
 	patches.suse/wifi-mt76-mt7925-Properly-handle-responses-for-comma.patch
+	patches.suse/wifi-mt76-mt7925-config-the-dwell-time-by-firmware.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-TP-Link-TXE50UH.patch
 	patches.suse/wifi-mt76-mt7996-fix-rx-filter-setting-for-bfee-func.patch
 	patches.suse/wifi-mt76-only-enable-tx-worker-after-setting-the-ch.patch
