--- a/series.conf
+++ b/series.conf
@@ -4546,6 +4546,7 @@
 	patches.suse/wifi-mt76-do-not-add-wcid-entries-to-sta-poll-list-d.patch
 	patches.suse/wifi-mt76-mt7915-fix-register-mapping.patch
 	patches.suse/wifi-mt76-mt7996-fix-register-mapping.patch
+	patches.suse/wifi-mt76-mt7925-fix-the-unfinished-command-of-regd_.patch
 	patches.suse/wifi-mt76-mt7996-add-max-mpdu-len-capability.patch
 	patches.suse/wifi-mt76-mt7996-fix-the-capability-of-reception-of-.patch
 	patches.suse/wifi-mt76-mt7996-fix-HE-Phy-capability.patch
