--- a/series.conf
+++ b/series.conf
@@ -4548,6 +4548,7 @@
 	patches.suse/wifi-mt76-mt7996-fix-register-mapping.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-unfinished-command-of-regd_.patch
 	patches.suse/wifi-mt76-mt7925-fix-CLC-command-timeout-when-suspen.patch
+	patches.suse/wifi-mt76-mt7925-add-handler-to-hif-suspend-resume-e.patch
 	patches.suse/wifi-mt76-mt7996-add-max-mpdu-len-capability.patch
 	patches.suse/wifi-mt76-mt7996-fix-the-capability-of-reception-of-.patch
 	patches.suse/wifi-mt76-mt7996-fix-HE-Phy-capability.patch
