wifi: mt76: mt7925e: fix too long of wifi resume time (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -4549,6 +4549,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-the-unfinished-command-of-regd_.patch
 	patches.suse/wifi-mt76-mt7925-fix-CLC-command-timeout-when-suspen.patch
 	patches.suse/wifi-mt76-mt7925-add-handler-to-hif-suspend-resume-e.patch
+	patches.suse/wifi-mt76-mt7925e-fix-too-long-of-wifi-resume-time.patch
 	patches.suse/wifi-mt76-mt7996-add-max-mpdu-len-capability.patch
 	patches.suse/wifi-mt76-mt7996-fix-the-capability-of-reception-of-.patch
 	patches.suse/wifi-mt76-mt7996-fix-HE-Phy-capability.patch
