--- a/series.conf
+++ b/series.conf
@@ -7426,6 +7426,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-country-count-limitation-for-CL.patch
 	patches.suse/wifi-mt76-Add-check-for-devm_kstrdup.patch
 	patches.suse/wifi-mt76-mt7925-Remove-unnecessary-if-check.patch
+	patches.suse/wifi-mt76-mt7925-Simplify-HIF-suspend-handling-to-av.patch
 	patches.suse/wifi-mt76-mt7921-fix-kernel-panic-due-to-null-pointe.patch
 	patches.suse/Revert-wifi-mt76-mt7925-Update-mt7925_mcu_uni_-tx-rx.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-link_idx-when-a-p2p_d.patch
