--- a/series.conf
+++ b/series.conf
@@ -7434,6 +7434,7 @@
 	patches.suse/wifi-mt76-mt7925-adjust-rm-BSS-flow-to-prevent-next-.patch
 	patches.suse/wifi-mt76-mt7925-load-the-appropriate-CLC-data-based.patch
 	patches.suse/wifi-mt76-mt7925-add-EHT-control-support-based-on-th.patch
+	patches.suse/wifi-mt76-mt7925-update-the-channel-usage-when-the-r.patch
 	patches.suse/wifi-mt76-mt7925-remove-unused-acpi-function-for-clc.patch
 	patches.suse/wifi-mt76-mt7996-revise-TXS-size.patch
 	patches.suse/wifi-mt76-mt7996-fix-SER-reset-trigger-on-WED-reset.patch
