wifi: mt76: mt7925: add EHT control support based on the CLC data (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -7433,6 +7433,7 @@
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-simultaneous-cap-for-.patch
 	patches.suse/wifi-mt76-mt7925-adjust-rm-BSS-flow-to-prevent-next-.patch
 	patches.suse/wifi-mt76-mt7925-load-the-appropriate-CLC-data-based.patch
+	patches.suse/wifi-mt76-mt7925-add-EHT-control-support-based-on-th.patch
 	patches.suse/wifi-mt76-mt7925-remove-unused-acpi-function-for-clc.patch
 	patches.suse/wifi-mt76-mt7996-revise-TXS-size.patch
 	patches.suse/wifi-mt76-mt7996-fix-SER-reset-trigger-on-WED-reset.patch
