wifi: mt76: mt7925: Fix logical vs bitwise typo (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -9756,6 +9756,7 @@
 	patches.suse/wifi-ath12k-fix-memory-leak-in-ath12k_service_ready_.patch
 	patches.suse/wifi-ath12k-fix-ring-buffer-corruption.patch
 	patches.suse/wifi-ath9k_htc-Abort-software-beacon-handling-if-dis.patch
+	patches.suse/wifi-mt76-mt7925-Fix-logical-vs-bitwise-typo.patch
 	patches.suse/Revert-wifi-mt76-mt7996-fill-txd-by-host-driver.patch
 	patches.suse/wifi-mt76-mt76x2-Add-support-for-LiteOn-WN4516R-WN45.patch
 	patches.suse/wifi-mt76-mt7925-introduce-thermal-protection.patch
