wifi: mt76: mt7925: refine the txpower initialization flow (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -12850,6 +12850,7 @@
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
 	patches.suse/wifi-mt76-mt7915-fix-mt7981-pre-calibration.patch
+	patches.suse/wifi-mt76-mt7925-refine-the-txpower-initialization-f.patch
 	patches.suse/wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
 	patches.suse/wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu_sta_k.patch
