wifi: mt76: mt7925: add pci restore for hibernate (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -12844,6 +12844,7 @@
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
+	patches.suse/wifi-mt76-mt7925-add-pci-restore-for-hibernate.patch
 	patches.suse/wifi-mt76-mt7921-Add-160MHz-beamformee-capability-fo.patch
 	patches.suse/wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
