wifi: mt76: mt7925: fix missing hdr_trans_tlv command for broadcast wtbl (bsc#1254315).

--- a/series.conf
+++ b/series.conf
@@ -9151,6 +9151,7 @@
 	patches.suse/mlxsw-spectrum_router-Fix-use-after-free-when-deleti.patch
 	patches.suse/wifi-mac80211-Set-n_channels-after-allocating-struct.patch
 	patches.suse/wifi-mt76-disable-napi-on-driver-removal.patch
+	patches.suse/wifi-mt76-mt7925-fix-missing-hdr_trans_tlv-command-f.patch
 	patches.suse/net-tls-fix-kernel-panic-when-alloc_page-failed.patch
 	patches.suse/HID-thrustmaster-fix-memory-leak-in-thrustmaster_int.patch
 	patches.suse/HID-uclogic-Add-NULL-check-in-uclogic_input_configur.patch
