mailbox: mailbox-test: Fix debugfs_create_dir error checking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35286,6 +35286,7 @@
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
+	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
