--- a/series.conf
+++ b/series.conf
@@ -35300,6 +35300,7 @@
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
+	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
