--- a/series.conf
+++ b/series.conf
@@ -35306,6 +35306,7 @@
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
+	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
