--- a/series.conf
+++ b/series.conf
@@ -35302,6 +35302,7 @@
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
+	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
