--- a/series.conf
+++ b/series.conf
@@ -35303,6 +35303,7 @@
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
+	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
