drivers/usb/dwc3: fix PCI parent check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35289,6 +35289,7 @@
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
+	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
