iio: adc: ad7280a: fix ad7280_store_balance_timer() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35299,6 +35299,7 @@
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
+	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
