--- a/series.conf
+++ b/series.conf
@@ -35296,6 +35296,7 @@
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
 	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
+	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
