--- a/series.conf
+++ b/series.conf
@@ -35290,6 +35290,7 @@
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
+	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
