most: usb: fix double free on late probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35298,6 +35298,7 @@
 	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
 	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
+	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
