--- a/series.conf
+++ b/series.conf
@@ -35293,6 +35293,7 @@
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/xhci-dbgtty-fix-device-unregister.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
+	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
