usb: cdns3: Fix double resource release in cdns3_pci_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35287,6 +35287,7 @@
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
+	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
