spi: bcm63xx: fix premature CS deassertion on RX-only transactions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35305,6 +35305,7 @@
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
+	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
