--- a/series.conf
+++ b/series.conf
@@ -35297,6 +35297,7 @@
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
 	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 	patches.suse/serial-amba-pl011-prefer-dma_mapping_error-over-expl.patch
+	patches.suse/slimbus-ngd-Fix-reference-count-leak-in-qcom_slim_ng.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
