firmware: stratix10-svc: fix bug in saving controller data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35304,6 +35304,7 @@
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
+	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
