usb: dwc3: Fix race condition between concurrent dwc3_remove_requests() call paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35292,6 +35292,7 @@
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/xhci-dbgtty-fix-device-unregister.patch
+	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
