usb: gadget: renesas_usbf: Handle devm_pm_runtime_enable() errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35295,6 +35295,7 @@
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
+	patches.suse/usb-gadget-renesas_usbf-Handle-devm_pm_runtime_enabl.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
