--- a/series.conf
+++ b/series.conf
@@ -35288,6 +35288,7 @@
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
+	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
