xhci: dbgtty: fix device unregister (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35291,6 +35291,7 @@
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
+	patches.suse/xhci-dbgtty-fix-device-unregister.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
