--- a/series.conf
+++ b/series.conf
@@ -35301,6 +35301,7 @@
 	patches.suse/most-usb-fix-double-free-on-late-probe-failure.patch
 	patches.suse/iio-adc-ad7280a-fix-ad7280_store_balance_timer.patch
 	patches.suse/iio-common-ssp_sensors-Fix-an-error-handling-path-ss.patch
+	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
